--- a/macros.tex
+++ b/macros.tex
@@ -22,37 +22,43 @@
 \newcommand*{\tftnorth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_north.pdf}}}
 \newcommand*{\tftwest}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_west.pdf}}}
 
-\newcommand*{\totgraphic}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_one_term.pdf}}}
+\newcommand*{\topologicalonecotermgraphic}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_one_term.pdf}}}
 
-% T4T and T1T (as sums of singular knots)
+% Typewriter tags for equation labels
+\newcommand{\differentiability}{\texttt{DIFF}}
+\newcommand{\differentiabilitystar}{\texttt{DIFF}\ensuremath{^\ast}}
+
+\newcommand{\topologicalfourtermstar}{\texttt{T4T}\ensuremath{^\ast}}
+\newcommand{\topologicalfourterm}{\texttt{T4T}}
+
+\newcommand{\topologicalonetermstar}{\texttt{T1T}\ensuremath{^\ast}}
+\newcommand{\topologicaloneterm}{\texttt{T1T}}
+
+\newcommand{\fourtermstar}{\texttt{4T}\ensuremath{^\ast}}
+\newcommand{\fourterm}{\texttt{4T}}
+
+\newcommand{\onetermstar}{\texttt{1T}\ensuremath{^\ast}}
+\newcommand{\oneterm}{\texttt{1T}}
+
+\newcommand{\as}{\texttt{AS}}
+
+\newcommand{\stu}{\texttt{STU}}
+
+\newcommand{\ihx}{\texttt{IHX}}
+
+
+% Boldface tags for knot sums
 \newcommand{\tftterm}{\mathbf{T4T}}
 \newcommand{\totterm}{\mathbf{T1T}}
 
-% T4T and T1T, DIFF (as relations on invariants)
-\newcommand{\tft}{\texttt{T4T}}
-\newcommand{\tot}{\texttt{T1T}}
-\newcommand{\diff}{\texttt{DIFF}}
-
-% T4T and T1T, DIFF (as relations on singular knots)
-\newcommand{\cotft}{\texttt{T4T}\ensuremath{^\ast}}
-\newcommand{\cotot}{\texttt{T1T}\ensuremath{^\ast}}
-\newcommand{\codiff}{\texttt{DIFF}\ensuremath{^\ast}}
-
-% 4T and 1T graphics
+% 4T graphics
 \newcommand*{\ftsouth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{four_term_south.pdf}}}
 \newcommand*{\fteast}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{four_term_east.pdf}}}
 \newcommand*{\ftnorth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{four_term_north.pdf}}}
 \newcommand*{\ftwest}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{four_term_west.pdf}}}
 
-\newcommand*{\otgraphic}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{one_term.pdf}}}
-
-% 4T and 1T (as relations on constants of integration)
-\newcommand{\ft}{\texttt{4T}}
-\newcommand{\ot}{\texttt{1T}}
-
-% 4T and 1T (as relations on chord diagrams)
-\newcommand{\coft}{\texttt{4T}\ensuremath{^\ast}}
-\newcommand{\coot}{\texttt{1T}\ensuremath{^\ast}}
+% 1T graphics
+\newcommand*{\isolatedchord}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{one_term.pdf}}}
 
 % Connected sum
-\newcommand{\hash}{\mathbin{\#}}
+\newcommand{\connect}{\mathbin{\sharp}}
